// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateCostV1 > fixture: box perimeter 300x50, internal pitched roof, same geometry 1`] = `
{
  "cost_ex_gst": 14926.09,
  "cost_inc_gst": 17165,
  "notes_and_warnings": [],
  "warnings": [],
}
`;

exports[`calculateCostV1 > fixture: pitched, acrylic, 6m × 3m, black, soffit + deck posts, 2.4m 1`] = `
{
  "cost_ex_gst": 11498.76,
  "cost_inc_gst": 13223.57,
  "notes_and_warnings": [],
  "warnings": [],
}
`;
